[package]
name = "rust-mic-test"
version = "0.1.0"
authors = ["Maor Kleinberger <kmaork@gmail.com>"]
edition = "2018"

[dependencies]
plotters = { version = "0.2.15", features = ["piston"] }
cpal = { version = "0.12.1", features = ["wasm-bindgen"] }

piston_window = { version = "*", optional = true } # Use the same version as plotters

[[bin]]
name = "rust-mic-test"
required-features = ['piston_window']